--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="main">
       <div class="main__container">
         <div class="main__content">
-          <h1>Georgia State Univeristy</h1>
+          <h1>Georgia State University</h1>
           <h2>Computer Science Club</h2>
       </div>
     </div>
