--- a/index.html
+++ b/index.html
@@ -1,44 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GSU CS Club</title>
-    <link rel="stylesheet" href="styles.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Computer Science Club @ GSU</title>
+
+<link rel="stylesheet" type="text/css" href="index.css">
+<!-- Bootstrap -->
+<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <nav class="navbar">
+
+<div class="logo active">
+
+	<a href="index.html"><img src="Image/logo1.png"></a>
+
+</div>
+
+<nav class="navbar-inverse col-md-12">
+  <div class="container-fluid"> 
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+    <a class="navbar-brand" href="index.html"><img class="iconlogo" src="Image/logo.png"></a></div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse " id="defaultNavbar1">
+      <ul class="nav navbar-nav ">
+        <li><a href="events.html">Events<span class="sr-only">Now</span></a></li>
+        <li><a href="signup.html"><span>Sign Up for News<span></a></li>
+        <li><a href="about.html">About </a>
+        </li>
+      </ul>
     </div>
-        <div class="navbar__container">
-            <div class="logo__img-main">
-                <img id="logo__img" src="images/nrx8AW1Wqn.svg" />
-            </div>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div> 
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/resources.html" class="navbar__links">Resources</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/events.html" class="navbar__links">Events</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="main">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>Georgia State University</h1>
-          <h2>Computer Science Club</h2>
-      </div>
+    <!-- /.navbar-collapse --> 
+  </div>
+  <!-- /.container-fluid --> 
+</nav>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1 class="text-center">Computer Science Club</h1>
     </div>
-    <script src="app.js"></script>
+  </div>
+  <hr>
+</div>
+<div class="container">
+  <div class="row text-center">
+    <div class="col-md-offset-3 col-md-6">
+<p><b>Future event details will be posted here. Please see our events page to learn more about our past events and workshops. </b>.
+</p>
+    <p>The Computer Science Club of Georgia State University was formed in December of 2010. The upcoming community aims to bring together students and faculty interested in the field of Computer Science to share their knowledge and experience in computers. </p>
+    <p>With today's competitive job market, it is imperative that every student is actively involved in the oragnization related to their field of discipline. The CS Club is devoted for student success in the field of computer science. By participating actively in the club, students will learn to more effectively collaborate among other students and faculties, ensuring their preparedness to face the real world beyond college education.</p>
+    <p>Our goal is simple, encourage all members to actively engage in our events to collaborate with other students and faculties which will ultimately enhance their knowledge about computers.</p></div>
+  </div>
+  <hr>
+  <!-- <div class="row">
+    <div class="text-justify col-sm-4"> Click here to select this<strong> column.</strong> Always place your content within a column. Columns are indicated by a dashed blue line. </div>
+    <div class="col-sm-4 text-justify"> You can <strong>resize a column</strong> using the handle on the right. Drag it to increase or reduce the number of columns.</div>
+    <div class="col-sm-4 text-justify"> You can <strong>offset a column</strong> using the handle on the left. Drag it to increase or reduce the offset. </div>
+  </div> -->
+ <!--  <hr> -->
+<!--
+  <div class="row">
+    <div class="text-center col-md-6 col-md-offset-3">
+      <div class="well-lg"><strong><h3>Follow Us</h3></strong></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="text-center col-md-6 col-md-offset-3">
+      <a class="btn btn-social-icon btn-facebook">
+    <a href="https://www.facebook.com/CSCatGSU/?fref=ts"><h2><span class="fa fa-facebook"></span></h2>
+  </a></a>
+    </div>
+  </div>
+-->
+  <hr>
+  <div class="row">
+    <div class="text-center col-md-6 col-md-offset-3">
+      <h4>Georgia State University</h4>
+      <p><a href="http://grid.cs.gsu.edu/~csclub/index.html" >CSCLUB@GSU</a></p>
+    </div>
+  </div>
+  <hr>
+</div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="bootstrap/jquery-1.11.3.min.js"></script>
+
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="bootstrap/bootstrap.js"></script>
 </body>
 </html>
